
VERSION = 0.6.2

	* Removed HeavyBug on Sqlite-Map creation
	* mothermapper -f: removed __import__, used execfile()
	* MotherFusion: it's now possible to specify jfilter
	* debugged arg_format usage
	* MotherFusion: debugged ({}, {}..) for selectWaht()
	* An interactive example for SQLite is provided
	* Examples for SQLite ans Postgres are provided
	* MotherFusion: __len__ method
	* MotherFusion: introduces distinct
	* MotherFusion: introduced order
	* MohterFusion is explained on the Manual
	* `mothermapper -f help` prints a human readable help
	* MotherFusion is able to exclude redundant params
	* MotherFusion can load relation params
	* new class MotherFusion
	* code cleaned
	* new _DbMap._sqlFreeJoin method
	* _sqlJoin&C moved from MotherManager to _DbMap class
	* mothermapper --help: deleted -C option


VERSION = 0.6.1

	* defconf.py -> _defconf.py
	* def_pgres.py -> _def_pgres.py
	* def_sqlite.py -> _def_sqlite.py
	* mothermapper: removed *C option, added -P and -S
	* added new modules: def_pgres and def_sqlite
	* debugging MohterManager methods


VERSION = 0.6.0

	* Sqlite Support
	* rewrited initalization methods 
	* dbda removed: added abdbda
	* added specific db interface: postgres.py sqlite.py
	* mothermapper uses always a persistent connection
	* mothermapper meta queries reside now on the db core
	* MO_ULOAD action is now obsolete
	* no primary key is needed to load one record
	* no primary key is needed to modify db record
	* added the flag 'paranoid' to the Mother classes
	* added class filter MoFilter
	* Mother uses now MoFilter instances as internal filters
	* writed a new documentation guide
	* _sqlBuildFilter() removed from DbMother
	* mogrify() is used only for postgres
	* logs are more clear
	* controlling fields on getField()
	* tester.py: a test unit


VERSION = 0.5.6

	* dbg: Psygres reconnection 
	* logging is more accurate
	* Mother uses only the pkeys to build filters (MO_ULOAD exception)


VERSION = 0.5.5
